src/objects/Ter_Pedidos_Catalogo__c.object
<CustomObject>
    <description>Este objeto contiene los pedidos del catalogo de productos que han sido elegidos por el ejecutivo comercial para ofrecer como obsequio para un contacto del cliente.</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <description>Este campo contiene el cliente del contacto.</description>
        <formula>Ter_Contacto__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Codigo_producto__c</fullName>
        <description>Este campo contiene el código del producto elegido para obsequiar al contacto.</description>
        <label>Código producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo en el que se registrara el Contacto al cual se le solicito el producto.</description>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pedidos Catalogo</relationshipLabel>
        <relationshipName>Ter_Pedidos_Catalogo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Ejecutivo_Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo en el que se almacenara el ejecutivo comercial que solicito el producto.</description>
        <label>Ejecutivo Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ter_Pedidos_Catalogo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Fecha_de_Solicitud__c</fullName>
        <description>Campo en el que se almacenara la fecha en la cual se realizo la solicitud del producto</description>
        <label>Fecha de Solicitud</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ter_Fecha_de_entrega__c</fullName>
        <description>Este campo contiene la fecha de entrega del obsequio al contacto.</description>
        <label>Fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ter_Nombre_del_Producto__c</fullName>
        <description>Campo en el que se almacenara el nombre del producto que sera solicitado</description>
        <label>Nombre del Producto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Ocasion__c</fullName>
        <description>Campo donde se almacenara la ocasión por la cual se realiza el pedido</description>
        <label>Ocasión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pedido Catalogo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ter_Nombre_del_Producto__c</columns>
        <columns>Ter_Contacto__c</columns>
        <columns>Ter_Ejecutivo_Comercial__c</columns>
        <columns>Ter_Ocasion__c</columns>
        <columns>Ter_Fecha_de_Solicitud__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>PED-{0000000}-{YYYY}{MM}{DD}</displayFormat>
        <label>No.Pedido Catalogo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos Catalogo</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TER_PCAT_001_Valida_propietario</fullName>
        <active>true</active>
        <description>Esta regla valida que el propietario no sea cambiado por algunos perfiles.</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Técnico Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Supervisor II Aviación y Marinos&quot;, 
$Profile.Name &lt;&gt; &quot;Ejecutivo de cuenta Aviación&quot;, 
$Profile.Name &lt;&gt; &quot;Ejecutivo de cuenta Marinos&quot;, 
$Profile.Name &lt;&gt; &quot;Director Industria&quot;, 
$Profile.Name &lt;&gt; &quot;Ejecutivo de Cuenta Industria&quot;, 
$Profile.Name &lt;&gt; &quot;Supervisor II Lubricantes&quot;, 
$Profile.Name &lt;&gt; &quot;Jefe de Zona Lubricantes&quot;, 
$Profile.Name &lt;&gt; &quot;Multisponsor&quot;, 
$Profile.Name &lt;&gt; &quot;Usuarios Mercadeo&quot; 
)</errorConditionFormula>
        <errorMessage>TER-PCAT-001: Su perfil no permite modificar el propietario.</errorMessage>
    </validationRules>
</CustomObject>